feat: endpoint implementation post-saves-saveid-load
